test/arrays/deitz/part5/test_array_uint2.good
test_array_uint2.chpl:1: error: index type mismatch in domain assignment
