test/arrays/deitz/part5/test_array_uint2.chpl
var D: domain(1) = {1..5:uint};
writeln(D);
